@@ -1,3 +1,8 @@
+4736.	[cleanup]	(a) Added comments to NSEC3-related functions in
+			lib/dns/zone.c.  (b) Refactored NSEC3 salt formatting
+			code.  (c) Minor tweaks to lock and result handling.
+			[RT #46053]
+
 4730.	[bug]		Fix out of bounds access in DHCID totext() method.
 			[RT #46001]
 
